--- a/src/app/emissor/emissor.component.html
+++ b/src/app/emissor/emissor.component.html
@@ -10,7 +10,7 @@
 	<div class="form-group col-12 mt-1">
 		<label>Informe um nome:</label>
     <div class="input-group">
-		<input type="text" class="form-control" #viaInput>
+		<input type="text" class="form-control" #viaInput (input)="enviarViaInput(viaInput.value)">
       <span class="input-group-btn ml-1">
         <button class="btn btn-success" type="button" (click)="enviarViaInput(viaInput.value)">Next!</button>
       </span>
@@ -23,7 +23,7 @@
  	<div class="form-group col-12 mt-1">
     <label>Informe uma música:</label>
     <div class="input-group">
-		<input type="text" class="form-control" #viaService>
+		<input type="text" class="form-control" #viaService (input)="enviarViaInput(viaService.value)">
       <span class="input-group-btn ml-1">
         <button class="btn btn-dark" type="button" (click)="enviarViaService(viaService.value)">Next!</button>
       </span>
